minor spacing fixed for main weather icon

--- a/src/Weather.css
+++ b/src/Weather.css
@@ -4,15 +4,15 @@
     margin-top: 100px;
     padding: 20px;
     font-family: "VT323";
-    background: lightgray;
+    background: gray;
 }
 .Weather img {
     margin-right: 0px;
-    position: relative;
-    bottom: 15px;
+    max-height: 70px;
+    padding-left: 10px;
 }
 .Weather h1 {
-    font-size: 50px;
+    font-size: 55px;
     margin: 30px 0 15px 0;
     font-weight: 100;
     line-height: 20px;
@@ -33,15 +33,11 @@
 }
 
 #main-temp {
-    font-size: 64px;
+    font-size: 70px;
     font-size: bolder;
     line-height: 64px;
     margin-left: 20px;
 
-}
-img {
-    max-height: 70px;
-    position: relative;
 }
 #units {
     font-size: 18px;
